--- a/index.css
+++ b/index.css
@@ -70,8 +70,9 @@ header{
   margin:0 20px;
   opacity: 0;
   transition: opacity 4s;
-  height: 100%;
+  height: 85%;
   overflow: scroll;
+  overflow-x: hidden;
   padding:20px 0;
 }
 .countriesItem{
@@ -87,3 +88,45 @@ header{
   list-style: none;
   text-align: left;
 }
+footer{
+  color: var(--white);
+  text-align: center;
+  overflow: hidden;
+  display: flex;
+  width: 2000px;
+}
+.scrollWorldUpdate{
+  display: flex;
+  white-space: nowrap;
+  align-items: center;
+  text-transform: uppercase;
+  /* overflow: hidden; */
+}
+.scrollWorldUpdate>li{
+margin-right: 30px;
+font-size: 15px;
+}
+.scrollWorldUpdate:nth-child(1){  
+  animation: scrollText1 10s linear infinite;
+}
+.scrollWorldUpdate:nth-child(2){
+  animation: scrollText2 10s linear infinite;
+  /* display: none; */
+}
+
+@keyframes scrollText1{
+0%{
+  transform: translateX(0);
+}
+100%{
+  transform: translateX(-100%);
+}
+}
+@keyframes scrollText2{
+  0%{
+    transform: translateX(0%);
+  }
+  100%{
+    transform: translateX(-100%);
+  }
+  }
