footer position fixed

--- a/index.css
+++ b/index.css
@@ -212,4 +212,8 @@ height: 75vh;
 grid-template-columns: repeat(auto-fit, 130px);
 grid-template-rows: repeat(auto-fit, 195px);
     }
+    footer{
+      position: fixed;
+      bottom: 0;
+    }
   }
